--- a/index.css
+++ b/index.css
@@ -1,16 +1,16 @@
 body{font-family: 'IBM Plex Sans Thai Looped', sans-serif;}
 .warm-up{position:absolute;
 top:200px;
-left:50px;
+left:55px;
 font-size:20px;
 font-weight: bold;}
 .Interview{position:absolute;
 top:250px;
-left:10px;
+left:55px;
 color:black;}
 .Questionnare{position:absolute;
 top:400px;
-left:10px;}
+left:55px;}
 .Assignment1{position:absolute;
 top:250px;
 left:600px;}
@@ -19,6 +19,9 @@ top:200px;
 left:600px;
 font-size:20px;
 font-weight: bold;}
+.Assignment2{position:absolute;
+  top:400px;
+  left:600px;}
 a {
   color:hotpink;
   text-decoration: none;
@@ -33,16 +36,20 @@ font-size:20px;
 font-weight: bold;}
 .description1{position:absolute;
 top:300px;
-left:10px;
+left:55px;
 color:black;}
 .description2{position:absolute;
 top:450px;
-left:10px;
+left:55px;
 color:black;}
 .description3{position:absolute;
 top:300px;
 left:600px;
 color:black;}
+.description4{position:absolute;
+  top:450px;
+  left:600px;
+  color:black;}
 .class{position:absolute;
 left:800px;
 font-size:20px;}
