--- a/index.css
+++ b/index.css
@@ -1,4 +1,25 @@
 body{font-family: 'IBM Plex Sans Thai Looped', sans-serif;}
+
+@font-face {
+  font-family: 'daubenton_regular';
+  src: url('daubentonwebfont-webfont.woff2') format('woff2'),
+       url('daubentonwebfont-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
+
+
+@font-face {
+  font-family: 'typefesseclaire-obscure';
+  src: url('typefesse_claire-obscure-webfont.woff2') format('woff2'),
+       url('typefesse_claire-obscure-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
 .warm-up{position:absolute;
 top:200px;
 left:55px;
