--- a/index.css
+++ b/index.css
@@ -2,8 +2,8 @@ body{font-family: 'IBM Plex Sans Thai Looped', sans-serif;}
 
 @font-face {
   font-family: 'typefesseclaire-obscure';
-  src: url('homepage typeface/typefesse_claire-obscure-webfont.woff2') format('woff2'),
-       url('homepage typeface/typefesse_claire-obscure-webfont.woff') format('woff');
+  src: url('homepagetypeface/typefesse_claire-obscure-webfont.woff2') format('woff2'),
+       url('homepagetypeface/typefesse_claire-obscure-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
