--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ left:800px;
 font-size:20px;}
 .interaction{position:absolute;
 font-size:80px;
-font-family:typefesse;
+font-family:typefesseclaire-obscure;
 top:-100px;
 left:50px;
 color:hotpink;}
