--- a/index.css
+++ b/index.css
@@ -68,3 +68,6 @@ font-family:typefesseclaire-obscure;
 top:-100px;
 left:50px;
 color:hotpink;}
+.Assignment3{position:absolute;
+  top:550px;
+  left:600px;}
