--- a/index.css
+++ b/index.css
@@ -89,3 +89,11 @@ color:hotpink;}
     .Assignment5:hover{color: hotpink;
       text-decoration: none;
     font-size:30px;}
+
+    .Assignment6{position:absolute;
+      top:1000px;
+      left:600px;
+      color: hotpink;}   
+    .Assignment6:hover{color: hotpink;
+      text-decoration: none;
+    font-size:30px;}
