--- a/Project3/Project3_Part7(2).css
+++ b/Project3/Project3_Part7(2).css
@@ -5,17 +5,21 @@ body {
 
 
 main#app {
-  display:inline;
+  display:block;
   flex: 1;
   flex-wrap: wrap;
 }
 
+div.crystal{display:block;
+    Overflow-x:auto;
+    Overflow-y:hidden;}
+
 div.container{width:300px;
-height:100px;
-display:inline;}
+height:400px;
+display:inline-block;}
 
 img.image {
-  max-width:20%;
+  max-width:100%;
 }
 
 p.title {
