--- a/Project3/Project3_Part7.css
+++ b/Project3/Project3_Part7.css
@@ -10,14 +10,14 @@
 
 body{font-size:30px;
     font-family: 'leonardo_fascia_trialm';
-background-color:black;
-color:white;}
+color:black;}
 .mountain1{position:absolute;
     top:150px;
     left:350px;
 max-width:85%;
 max-height:85%;
-height:85%;}
+height:85%;
+}
 
 .mountain2{position:absolute;
     top:100px;
@@ -69,3 +69,20 @@ height:70%;}
     max-width:30%;
     max-height:30%;
     height:30%;}
+
+.scene2{position:absolute;
+left:1400px;
+top:400px;
+transform: rotate(30deg);}
+
+.scene2a{position:absolute;
+    left:1600px;
+    top:420px;}
+
+.scene2b{position:absolute;
+        left:1800px;
+        top:420px;}
+
+.scene2c{position:absolute;
+            left:2050px;
+            top:420px;}
