--- a/Project3/Project3_Part7.css
+++ b/Project3/Project3_Part7.css
@@ -10,65 +10,89 @@
 
 body{font-size:30px;
     font-family: 'leonardo_fascia_trialm';
-color:black;}
+color:black;
+max-width:5000px;}
 .mountain1{position:absolute;
-    top:150px;
+    top:100px;
     left:350px;
-max-width:85%;
-max-height:85%;
-height:85%;
+max-width:90%;
+max-height:90%;
+height:90%;
+filter:brightness(140%);
 }
 
 .mountain2{position:absolute;
-    top:100px;
-    left:50px;
+    top:-100px;
+    left:-90px;
+max-width:101%;
+max-height:101%;
+height:101%;
+filter:brightness(140%);}
+
+.mountain3{position:absolute;
+    top:-10px;
+    left:500px;
 max-width:50%;
 max-height:50%;
-height:50%;}
+height:50%;
+filter:brightness(140%);}
 
 .scene1{position:absolute;
 left:490px;
-top:520px;
+top:580px;
 transform: rotate(-40deg);}
 
 .scene1a{position:absolute;
-    left:520px;
+    left:600px;
     top:430px;
-    transform: rotate(-60deg);}
+    transform: rotate(-70deg);}
 
 .scene1b{position:absolute;
-        left:620px;
-        top:350px;
+        left:700px;
+        top:330px;
         transform: rotate(-10deg);}
 
 .scene1c{position:absolute;
-        left:690px;
-        top:300px;
+        left:870px;
+        top:180px;
         transform: rotate(-60deg);}
 
 .scene1d{position:absolute;
-         left:720px;
-         top:240px;
-         transform: rotate(-5deg);}
-
-.scene1e{position:absolute;
-         left:800px;
-         top:190px;
-         transform: rotate(-55deg);}
+         left:920px;
+         top:100px;
+         transform: rotate(-20deg);}
 
 .glacier{position:absolute;
 left:1800px;
 top:150px;
 max-width:70%;
 max-height:70%;
-height:70%;}
+height:70%;
+filter:brightness(140%);}
 
 .glacier2{position:absolute;
     left:1600px;
     top:20px;
     max-width:30%;
     max-height:30%;
-    height:30%;}
+    height:30%;
+    filter:brightness(140%);}
+
+.glacier3{position:absolute;
+        left:1500px;
+        top:550px;
+        max-width:30%;
+        max-height:30%;
+        height:30%;
+        filter:brightness(140%);}
+
+.glacier4{position:absolute;
+            left:2100px;
+            top:0px;
+            max-width:30%;
+            max-height:30%;
+            height:30%;
+            filter:brightness(140%);}
 
 .scene2{position:absolute;
 left:1400px;
