--- a/Project3/Project3_Part7(2).css
+++ b/Project3/Project3_Part7(2).css
@@ -1,6 +1,15 @@
-body {
+@font-face {
+    font-family: 'leonardo_fascia_trialm';
+    src: url('/Project3/font/leonardofascia-m-trial-webfont.woff2') format('woff2'),
+         url('/Project3/font/leonardofascia-m-trial-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+body {background-color:gray;
   margin: 0;
   padding: 0;
+  font-family: 'leonardo_fascia_trialm';
 }
 
 
@@ -14,20 +23,19 @@ div.crystal{display:block;
     Overflow-x:auto;
     Overflow-y:hidden;}
 
-div.container{width:300px;
+div.container{background-color: gray;
+width:300px;
 height:400px;
 display:inline-block;}
 
 img.image {
   max-width:100%;
-  filter:brightness(140%);
+  filter:brightness(120%);
 }
 
 p.title {
-  padding: 5px;
-  border-radius: 6px;
-  background-color: white;
   text-align: left;
+  color:white;
 }
 
 @media screen and (min-width: 768px) {
