--- a/Assignment9/Assignment10.css
+++ b/Assignment9/Assignment10.css
@@ -7,6 +7,7 @@
 
 }
 body{font-family: 'leonardo_fascia_trialm';}
+div.container{ text-align:center;}
 .Map {
     margin-bottom: 1rem;
     border: 1px solid black; 
