--- a/index.css
+++ b/index.css
@@ -118,3 +118,10 @@ color:hotpink;}
       .Assignment7:hover{color: hotpink;
         text-decoration: none;
       font-size:30px;}
+      .Assignemnt8{position:absolute;
+    top:1350px;
+    left:600px;
+    color: hotpink;}
+    .Assignemnt8:hover{color: hotpink;
+      text-decoration: none;
+    font-size:30px;}
