--- a/Assignment9/Assignment10.css
+++ b/Assignment9/Assignment10.css
@@ -8,21 +8,6 @@
 }
 body{font-family: 'leonardo_fascia_trialm';}
 div.container{ text-align:center;}
-.Map {
-    margin-bottom: 1rem;
-    border: 1px solid black; 
-    padding: 1rem; 
-}
 
-#negative{position:absolute;
-top:700px;
-font-family: 'leonardo_fascia_trialm';}
-#positive{position:absolute;
-    top:700px;
-left:150px;
-font-family: 'leonardo_fascia_trialm';}
+.question{position:absolute;}
 
-#neutral{position:absolute;
-        top:700px;
-    left:300px;
-    font-family: 'leonardo_fascia_trialm';}
