--- a/Assignment9/Assignment10.css
+++ b/Assignment9/Assignment10.css
@@ -13,13 +13,15 @@ color:antiquewhite;}
 main{position:absolute;
 top:450px;
 font-size:30px;
-left:420px;
+left:20px;
+
 }
 .question{position:absolute;
     top:150px;
     font-size:60px;
     font-style: italic;
-left:300px;}
+    left:10px;
+}
 
 
 
