--- a/Project3/Project3_Part7(2).css
+++ b/Project3/Project3_Part7(2).css
@@ -1,66 +1,56 @@
 @font-face {
-    font-family: 'leonardo_fascia_trialm';
-    src: url('/Project3/font/leonardofascia-m-trial-webfont.woff2') format('woff2'),
-         url('/Project3/font/leonardofascia-m-trial-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'leonardo_fascia_trialm';
+  src: url('/Project3/font/leonardofascia-m-trial-webfont.woff2') format('woff2'),
+       url('/Project3/font/leonardofascia-m-trial-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 
 }
-body {background-color:gray;
-  margin: 0;
-  padding: 0;
-  font-family: 'leonardo_fascia_trialm';
+body {background-color:rgb(74, 74, 74);
+margin: 0;
+padding: 0;
+font-family: 'leonardo_fascia_trialm';
 }
 
 
 main#app {
-  display:block;
-  flex: 1;
-  flex-wrap: nowrap;
+display:block;
+flex: 1;
+flex-wrap: nowrap;
 }
 
 #Crystal{height:100vh;
   display: flex;
-  width:300vw;
+  width: 250vw;
   overflow-x: scroll;
   align-items: center;}
 
-span.container{
-  
-  display: block;
+div.container{
+display: block;
 }
 
 img.image {
-  max-width:150%;
-  filter:brightness(120%);
+
+max-width:400%;
+filter:brightness(140%);
+}
+
+p.title {
+color:rgb(74, 74, 74);
 }
 
 @media screen and (min-width: 768px) {
-  div.container {
-    padding: 2%;
-    margin: 2%;
-    flex-basis: 29%;
-  }
+div.container {
+  padding: 2%;
+  margin: 2%;
+  flex-basis: 29%;
+}
 }
 
 @media screen and (min-width: 1280px) {
-  span.container {
-    padding: 2%;
-    margin: 2%;
-    flex-basis: 21%;
-  }
+div.container {
+  padding: 2%;
+  margin: 2%;
+  flex-basis: 21%;
 }
-
-#MountainTwo{
-  height:80vh;
-  display:flex;
-  width: 250vw;
-  overflow-x: scroll;
-  align-items: center;}
-
-#MountainThree{height:100vh;
-  display: flex;
-  width: 250vw;
-  overflow-x: scroll;
-  align-items: center;}
-
+}
