--- a/Project3/Project3_Part7.css
+++ b/Project3/Project3_Part7.css
@@ -484,4 +484,20 @@ transform: rotate(30deg);}
         }
       }
 
-      
+p{position:fixed;
+top:50px;
+left:50px;
+font-size:20px;
+text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem black,
+            -0.2rem 0.1rem 1rem black, 0.2rem 0.1rem 1rem black,
+            0 -0.5rem 2rem black, 0 0.5rem 3rem black;}
+.extra{display: none;}
+
+p:hover .extra {
+                display: inline-block;
+                text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem black,
+                -0.2rem 0.1rem 1rem black, 0.2rem 0.1rem 1rem black,
+                0 -0.5rem 2rem black, 0 0.5rem 3rem black;
+            }
+
+.auto   { cursor: auto; }
