--- a/Workshop4.html/Workshop4.css
+++ b/Workshop4.html/Workshop4.css
@@ -1,5 +1,36 @@
+body{font-family: Arial, Helvetica, sans-serif;
+background-color:black;
+color:white;}
 .user {
     margin-bottom: 1rem;
-    border: 1px solid black; 
     padding: 1rem; 
 }
+button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+@font-face {
+    font-family: 'sportyporegular';
+    src: url('./webfontkit-20220421-235845/sportyporeguler-ovgwe-webfont.woff2') format('woff2'),
+         url('./webfontkit-20220421-235845/sportyporeguler-ovgwe-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;}
+
+.title{position:fixed;
+top:50px;
+left:300px;
+font-size:50px;
+font-family: 'sportyporegular';
+}
+.buttons{position:absolute;
+top:700px;
+left:100px;}
+#users{position:absolute;
+top:200px;
+left:100px;}
