--- a/Project4/Project4_Part3.css
+++ b/Project4/Project4_Part3.css
@@ -1,3 +1,4 @@
+body{max-height:100vh;}
 .backgroundimage{position:absolute;
 top:-10px;
 left:0px;
@@ -5,12 +6,10 @@ max-width:130%;
 max-height:130%;
 height:130%;}
 
-img{position:absolute;
+img{position:fixed;
     top:-10px;
     left:0px;
-    max-width:130%;
-    max-height:130%;
-    height:130%;}
+    max-width:100vw;}
 
 .mouse{position:absolute;
 top:250px;
@@ -22,3 +21,9 @@ opacity:0%;
     }
 
 .a{opacity:0%}
+
+@media only screen and (max-width: 768px) {
+  img{max-width:160%;
+    max-height:160%;
+    height:160%;}
+}
