--- a/Project4/Project4_Part3.css
+++ b/Project4/Project4_Part3.css
@@ -1,4 +1,11 @@
 body{max-height:100vh;}
+@font-face {
+    font-family: 'leonardo_fascia_trialm';
+    src: url('./font/leonardofascia-m-trial-webfont.woff2') format('woff2'),
+         url('./font/leonardofascia-m-trial-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 .backgroundimage{position:absolute;
 top:-10px;
 left:0px;
@@ -11,14 +18,12 @@ img{position:fixed;
     left:0px;
     max-width:100vw;}
 
+        
 .mouse{position:absolute;
 top:250px;
 left:320px;
 opacity:0%;
 }
-.mouse:hover{opacity:100%;
-    font-size:20px;
-    }
 
 .a{opacity:0%}
 
@@ -27,3 +32,30 @@ opacity:0%;
     max-height:160%;
     height:160%;}
 }
+
+@media only screen and (min-width:768px) {
+    img{max-width:140%;
+      max-height:140%;
+      height:140%;}
+  }
+
+
+#box{position:absolute;
+    top:300px;
+    left:300px;
+    width:800px;
+    height:200px;
+    opacity:0%;
+}
+#background{z-index:-1;}
+#box:hover ~ img#background {
+    filter: blur(2px);
+    -webkit-filter: blur(4px);
+    }
+#box:hover ~ .mouse{opacity:100%;
+    font-size:20px;
+    font-family: 'leonardo_fascia_trialm';}
+
+
+
+
