--- a/Project4/Project4_Part3.css
+++ b/Project4/Project4_Part3.css
@@ -36,7 +36,9 @@ opacity:0%;
 @media only screen and (min-width:768px) {
     img{max-width:140%;
       max-height:140%;
-      height:140%;}
+      height:140%;
+      position:fixed;
+      max-width:100vw;}
   }
 
 
