--- a/Assignment8/Assignment8.css
+++ b/Assignment8/Assignment8.css
@@ -25,7 +25,7 @@ div#information h1 {position:absolute;
   text-align: left;
 }
 
-div#information p {position:fixed;
+p.description {position:fixed;
     top:265px;
     left:1000px;
   max-width: 400px;
@@ -57,7 +57,7 @@ img.image {opacity:50%;
 img.image:hover{opacity:100%;}
 
 p.title {color:white;
-  padding: 5px;
+  padding:5px;
   width:200px;
   height:30px;
   border-radius: 6px;
@@ -68,31 +68,30 @@ p.title {color:white;
   
 
 @media screen and (max-width: 768px) {
-    div.container {
+    div.container {top:100%;
       padding: 2%;
       margin: 2%;
       flex-basis: 29%;
     }
     div#information h1 {font-size:20px;
         left:50px;
-        max-width: 500px;}
-        div#information p {top:180px;
-        font-size:10px;
-        left:550px;
-        max-width: 160px;}
+        width:300px;
+        position:absolute;
+        top:-5%;}
+p.description {position:absolute;
+    top:100%;
+    left:5%;
+        font-size:13px;
+        max-width:400px;}
         p.title{font-size:10px;
             width:200px;
-            height:25px;}}
-    
-  
-@media screen and (min-width:768px) { 
-    p.title{font-size:15px;
-    width:200px;
-    height:30px;}}
-    div#information p{
-    left:68%;
-top:37%;}
-div#information h1{left:5%;}
-
-@media screen and (min-width:1000px) { 
+            height:25px;}
+            img.image {opacity:60%;
+              max-width:75%;
+            }
+          }
+          @media screen and (min-width:768px) { 
+            div#information p{font-size:15px;
+            left:70%;}} 
+@media screen and (min-width:1300px) { 
     div#information p{font-size:15px;}}
