--- a/Assignment9/Assignment10.css
+++ b/Assignment9/Assignment10.css
@@ -29,5 +29,6 @@ left:20px;
         transform: rotate(90deg);
       }
 
-
-
+      @media only screen and (max-width:1300px){
+        .refresh{left:90%;}  
+      }
