--- a/test/Test.css
+++ b/test/Test.css
@@ -6,9 +6,9 @@
     font-style: normal;
   
   }
-h1{font-size:60px;
+h1{font-size:80px;
     font-family: 'typefesseclaire-obscure';
-color:#ffa64d}
+color:black;}
 body{background-color:#ffffe6;
 font-size:18px;
 font-family: 'Radio Canada', sans-serif;}
