--- a/Assignment3/assignment3.css
+++ b/Assignment3/assignment3.css
@@ -20,7 +20,7 @@ font-size:30px;
 border:20px;
 margin:30px;
 color:white;
-top:900px;}
+top:1200px;}
 .detailcontainer{position:absolute;
 padding: 20px 1em 0 2em;
 border:20px;
@@ -28,48 +28,56 @@ font-size:30px;
 border:20px;
 margin:30px;
 color:white;
-top:900px;
+top:1200px;
 left:900px;}
 
-@media only screen and (max-width: 382px) {
-  /* For mobile phones: */
-  [class*="detailcontainer"] {
-    width: 100%;
-  top:50px;
-left:50px;
-font-size:25px;z-index: -1;}
-}
-
-@media only screen and (max-width: 532px) {
-  /* For mobile phones: */
-  [class*="detailcontainer"] {
-    width: 100%;
-  top:50px;
-left:50px;
-font-size:25px;z-index: -1；}
-}
-
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="detailcontainer"] {
-    width: 100%;
-  top:450px;
-left:500px;
-font-size:20px;}
-}
-
-
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="descriptioncontainer"] {
-    width: 100%;
-  top:450px;
-left:0px;
-font-size:20px;}
-}
 .description{position:absolute;
-top:300px;
-left:120px;
+  top:300px;
+  left:110px;
+  color:white;
+  width:300px;
+  font-size:25px;}
+  @media only screen and (max-width:1000px){
+    .container{left:500px;}
+    .description{font-size:20px;
+      width:300px;
+    left:90px;}
+    .detailcontainer{top:800px;
+    left:600px;
+  font-size:20px;
+width:300px;}
+     .descriptioncontainer{top:800px;
+    font-size:20px;}
+  img{max-width:170%;}
+    }
+@media only screen and (max-width:800px){
+.description{top:250px;
+left:50px;
+font-size:15px;}
+.container{left:300px;}
+.detailcontainer{top:600px;
+font-size:20px;
+left:500px;
+width:200px;}
+.descriptioncontainer{top:600px;
+font-size:20px;
+left:-10px;}
+img{max-width:180%;}
+}
+
+@media only screen and (max-width:600px){
+  .description{top:200px;
+    font-size:10px;
+  left:50px;
 color:white;
 width:200px;
-font-size:20px;}
+top:250px;}
+img{max-width:210%;} 
+.container{left:100px;}
+.detailcontainer{top:550px;
+left:300px;
+font-size:12px;}
+.descriptioncontainer{font-size:12px;
+top:550px;
+}
+  }
