--- a/Assignment6/Assignment6(3).css
+++ b/Assignment6/Assignment6(3).css
@@ -6,7 +6,7 @@
      position:absolute;
      top:350px;
     font-size: 80px;
-    color: #F0E68C;
+    color:#797446;
     text-align: center;
     animation: glow 10s ease-in-out infinite alternate;
   animation-duration:infinite;}
