--- a/Portfolio/yuntongchen_portfolio.css
+++ b/Portfolio/yuntongchen_portfolio.css
@@ -7,8 +7,7 @@
     top:5px;
     left:30px;
     font-family: 'Heebo', sans-serif;
-    font-size:70px;
-}
+    font-size:70px;}
 .column{position:fixed;
     top:45px;
     left:800px;
